# encoding

./: dune-project  encoding.opam
lib/: common.ml  common.mli  dune  expression.ml  types.ml
lib/caching/: normalize.ml  slicing.ml  slicing2.ml
lib/constructors/: bitVector.ml  bitVector.mli
lib/exec/: eval_numeric.ml
lib/mappings/: z3_mappings.ml
lib/operators/: bvOp.ml
lib/parser/: lexer.mll  parser.mly  utils.ml  utils.mli
lib/syntax/: expression.ml  num.ml
